--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="medium">#82B5FE</color>
     <color name="grey">#cfd8df</color>
     <color name="bg">#FFFFFF</color>
+    <color name="red">#CC3E44</color>
 </resources>
