--- a/app/src/main/res/layout/comments_layout.xml
+++ b/app/src/main/res/layout/comments_layout.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:paddingBottom="10dp"
-    android:background="@drawable/topradius"
+
+    android:background="@color/bg"
     android:layout_height="match_parent">
 
     <com.google.android.material.card.MaterialCardView
