--- a/app/src/main/res/menu/mc_more.xml
+++ b/app/src/main/res/menu/mc_more.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/action_review"
+        android:id="@+id/write_review"
         android:title="Reviews" />
+    <item
+        android:id="@+id/action_payments"
+        android:title="All Payments" />
 
 </menu>
