--- a/app/src/main/res/layout/fragment_polls.xml
+++ b/app/src/main/res/layout/fragment_polls.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg"
-    tools:context=".ui.MessCommittee.fragments.PollsFragment">
+    android:background="@color/bg">
 
     <TextView
 
@@ -15,8 +13,8 @@
         android:gravity="center"
         android:text="No Polls Present."
         android:textColor="@color/food"
-        android:textStyle="bold"
         android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
