--- a/app/src/main/res/layout/particulars_element_layout.xml
+++ b/app/src/main/res/layout/particulars_element_layout.xml
@@ -7,14 +7,14 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="5dp"
     android:layout_marginBottom="25dp"
-
     android:elevation="0dp"
+    app:cardBackgroundColor="@color/menu"
     app:cardCornerRadius="12dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/menu">
+        >
 
         <View
             android:id="@+id/view3"
