--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="grey">#cfd8df</color>
     <color name="bg">#FFFFFF</color>
     <color name="red">#CC3E44</color>
+    <color name="nav_black">#FFFFFF</color>
+    <color name="nav_element">#000000</color>
 </resources>
