--- a/app/src/main/res/layout/sel_target_dialog.xml
+++ b/app/src/main/res/layout/sel_target_dialog.xml
@@ -32,7 +32,8 @@
             android:id="@+id/rb0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+              android:gravity="center"
+            android:textColor="@color/black"
             android:text="Batch-2024"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -41,7 +42,8 @@
             android:id="@+id/rb1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+              android:gravity="center"
+            android:textColor="@color/black"
             android:text="Batch-2024"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rb0" />
@@ -50,7 +52,8 @@
             android:id="@+id/rb2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+              android:gravity="center"
+            android:textColor="@color/black"
             android:text="Batch-2024"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rb1" />
@@ -59,7 +62,8 @@
             android:id="@+id/rb3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+              android:gravity="center"
+            android:textColor="@color/black"
             android:text="Batch-2024"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rb2" />
@@ -68,7 +72,8 @@
             android:id="@+id/rb4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+              android:gravity="center"
+            android:textColor="@color/black"
             android:text="Batch-2024"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rb3" />
@@ -77,7 +82,8 @@
             android:id="@+id/rb5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+              android:gravity="center"
+            android:textColor="@color/black"
             android:text="Batch-2024"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rb4" />
@@ -97,7 +103,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="45dp"
-            android:gravity="center"
+              android:gravity="center"
+            android:textColor="@color/black"
             android:text="Female"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -107,7 +114,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="45dp"
-            android:gravity="center"
+              android:gravity="center"
+            android:textColor="@color/black"
             android:text="Male    "
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.541"
@@ -119,7 +127,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="45dp"
-            android:gravity="center"
+              android:gravity="center"
+            android:textColor="@color/black"
             android:text="Btech    "
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.541"
@@ -131,7 +140,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="45dp"
-            android:gravity="center"
+              android:gravity="center"
+            android:textColor="@color/black"
             android:text="Mtech   "
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.541"
@@ -143,7 +153,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="45dp"
-            android:gravity="center"
+              android:gravity="center"
+            android:textColor="@color/black"
             android:text="MBA     "
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.541"
@@ -155,7 +166,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="45dp"
-            android:gravity="center"
+              android:gravity="center"
+            android:textColor="@color/black"
             android:text="Mtech   "
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.541"
