--- a/app/src/main/res/layout/activity_edit_complete.xml
+++ b/app/src/main/res/layout/activity_edit_complete.xml
@@ -5,80 +5,63 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/menu"
+    android:background="@color/bg"
     android:gravity="center"
-    android:orientation="vertical"
-  >
+    android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="59dp"
-        app:titleTextColor="@color/white"
         android:background="@color/food"
-        android:title="Upload Menu"
         android:paddingBottom="5dp"
+        android:title="Upload Menu"
         android:titleTextColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:titleEnabled="true" />
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:scrollbars="none"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar">
+        app:titleEnabled="true"
+        app:titleTextColor="@color/white" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="0dp"
         android:layout_margin="25dp"
         android:src="@drawable/undraw_done_re_oak4"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf = "@id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button"
-
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="59dp"
         android:layout_marginHorizontal="25dp"
-        android:backgroundTint="@color/white"
         android:drawableEnd="@drawable/baseline_file_download_24"
         android:text="Download edited Menu"
-        android:textColor="@color/food"
-        app:cornerRadius="15dp"
-
+        android:textColor="@color/white"
+        app:cornerRadius="5dp"
+        android:layout_marginVertical="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/send"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        app:strokeColor="@color/grey"
-        app:strokeWidth="2dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/send"
-
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="59dp"
         android:layout_marginHorizontal="25dp"
-        android:layout_marginVertical="25dp"
-        android:backgroundTint="@color/white"
+        android:layout_marginBottom="45dp"
         android:drawableEnd="@drawable/baseline_send_24"
         android:text="Send Menu for Approoval"
-        android:textColor="@color/food"
-        app:cornerRadius="15dp"
+        android:textColor="@color/white"
+        app:cornerRadius="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
-        app:strokeColor="@color/grey"
-        app:strokeWidth="2dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
