--- a/app/src/main/res/layout/particulars_element_layout.xml
+++ b/app/src/main/res/layout/particulars_element_layout.xml
@@ -4,6 +4,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/card"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="5dp"
     android:layout_marginBottom="25dp"
@@ -31,7 +32,6 @@
             android:layout_height="55dp"
             android:gravity="center_vertical"
             android:paddingStart="13dp"
-            android:text="Lunch"
             android:textColor="@color/food"
             android:textSize="27dp"
             android:textStyle="bold"
@@ -44,8 +44,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
-            android:paddingStart="13dp"
-            android:text="@string/demolunch"
+            android:paddingHorizontal="13dp"
             android:textColor="@color/black"
             android:textSize="15dp"
             android:textStyle="bold"
@@ -71,7 +70,6 @@
             android:layout_marginVertical="15dp"
             android:gravity="center_vertical"
             android:paddingStart="13dp"
-            android:text="12:30 P.M. to 2:30 P.M. "
             android:textColor="@color/food"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
