Added refresh layout

--- a/app/src/main/res/layout/fragment_special_meal.xml
+++ b/app/src/main/res/layout/fragment_special_meal.xml
@@ -171,18 +171,42 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </com.google.android.material.card.MaterialCardView>
 
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_marginVertical="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Send Notification:"
+                android:textColor="@color/food"
+                android:layout_marginHorizontal="25dp"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@id/uploadMenuButton"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cardView" />
+
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/uploadMenuButton"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="15dp"
                 android:text="Upload Special Meal"
                 android:textAllCaps="false"
                 app:cornerRadius="4dp"
                 app:elevation="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cardView" />
+                app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+            <Switch
+                android:id="@+id/notiSwitch"
+                android:soundEffectsEnabled="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="15dp"
+                android:layout_marginHorizontal="25dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
             <TextView
                 android:id="@+id/notificationText"
