--- a/app/src/main/res/layout/widget_particular_element.xml
+++ b/app/src/main/res/layout/widget_particular_element.xml
@@ -21,7 +21,7 @@
         android:id="@+id/foodMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:layout_marginTop="4dp" />
 
