--- a/app/src/main/res/layout/menu_widget.xml
+++ b/app/src/main/res/layout/menu_widget.xml
@@ -3,6 +3,8 @@
     android:id="@+id/widgetContainer"
     android:orientation="vertical"
     android:padding="8dp"
+    android:layout_margin="15dp"
+    android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
@@ -12,6 +14,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@android:color/transparent"
-        android:dividerHeight="8dp"
         android:scrollbars="none"/>
 </LinearLayout>
