--- a/app/src/main/res/layout/menu_widget.xml
+++ b/app/src/main/res/layout/menu_widget.xml
@@ -3,7 +3,6 @@
     android:id="@+id/widgetContainer"
     android:orientation="vertical"
     android:padding="8dp"
-    android:layout_margin="15dp"
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,6 +10,7 @@
 
     <ListView
         android:id="@+id/menuListView"
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@android:color/transparent"
