--- a/app/src/main/res/layout/widget_particular_element.xml
+++ b/app/src/main/res/layout/widget_particular_element.xml
@@ -1,50 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="@color/menu"
-    android:layout_marginHorizontal="5dp"
-    android:layout_marginBottom="10dp"
-    android:padding="5dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <TextView
-        android:id="@+id/foodType"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/food"
-        android:textStyle="bold"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/foodMenu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textSize="15sp"
-        android:layout_marginTop="4dp" />
-
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="5dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="10dp"
+    android:background="@drawable/rounded_corner"
+    android:backgroundTint="@color/food"
+    android:orientation="horizontal"
+    >
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp">
-
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/baseline_access_time_24"
-            app:tint="@color/food" />
+        android:layout_height="match_parent"
+        android:background="@color/menu"
+        android:layout_marginStart="15dp"
+        android:padding="8dp"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/foodTiming"
-            android:layout_width="wrap_content"
+            android:id="@+id/foodType"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/food"
-            android:textSize="14sp"
-            android:layout_marginStart="8dp"
-            android:gravity="center_vertical" />
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/foodMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/baseline_access_time_24"
+                app:tint="@color/food" />
+
+            <TextView
+                android:id="@+id/foodTiming"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:gravity="center_vertical"
+                android:textColor="@color/food"
+                android:textSize="14sp" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
