--- a/app/src/main/res/xml/menu_widget_info.xml
+++ b/app/src/main/res/xml/menu_widget_info.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="80dp"
+    android:minWidth="160dp"
     android:minHeight="160dp"
+    android:targetCellWidth="2"
+    android:targetCellHeight="2"
     android:updatePeriodMillis="1800000"
     android:initialLayout="@layout/menu_widget"
     android:previewImage="@drawable/logo"
     android:resizeMode="horizontal|vertical"
-    android:widgetCategory="home_screen" />
+    android:widgetCategory="home_screen|keyguard" />
